fix(Stream):불변 리스트로 수정